# wordstirr

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_wordstirr.py
wordstirr/: wordstirr.py
