[tool.poetry]
name = "wordstirr"
version = "0.1.0"
description = "Python script that changes letter order in inside words for speed reading training."
authors = ["Simon Weiss <wonder@simonweiss.space>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
ipdb = "^0.13.4"
pytest-mock = "^3.4.0"
ptpython = "^3.0.7"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
